# EEGBioSignalPythonScript

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/: EDA-Plotting.ipynb
notebooks/: appendix_breathing_rate_eda.ipynb  math_notes.ipynb
output/: breathing_rate_120s.csv  breathing_rate_15s.csv  breathing_rate_240s.csv  breathing_rate_30s.csv  breathing_rate_60s.csv  post-EDA-plotting.ipynb
output/tables/: br15_descriptive.csv  br15_missing_runs.csv  br15_outliers.csv
src/: __init__.py  compute_breathing_rate.py  compute_breathing_rate_final.py  ibirsa.py
tests/: test_parsing_json.py  test_synthetic_signals.py
